--- a/packages/twenty-website/src/content/releases/1.4.0.mdx
+++ b/packages/twenty-website/src/content/releases/1.4.0.mdx
@@ -17,6 +17,6 @@ Add filters between workflow steps with conditions and only let data continue if
 
 # Two Factor Authentication
 
-Eabled two-factor authentication with authenticator apps like 1Password, Authy, or Microsoft Authenticator to add an extra layer of security at sign-in.
+Enabled two-factor authentication with authenticator apps like 1Password, Authy, or Microsoft Authenticator to add an extra layer of security at sign-in.
 
 ![](/images/releases/1.4/1.4-two-factor-auth.png)
