docs: reflect settings nav changes
- Update references to APIs & Webhooks location (no more Developers)
- Update webhook creation/deletion flow to use APIs & Webhooks path
- Update Lab references to Releases → Lab tab
- Update Zapier local URL to /settings/api-webhooks

--- a/packages/twenty-website/src/content/developers/api-and-webhooks/api.mdx
+++ b/packages/twenty-website/src/content/developers/api-and-webhooks/api.mdx
@@ -8,7 +8,7 @@ info: Discover how to use our APIs.
 ## Overview
 The Twenty API allows developers to interact programmatically with the Twenty CRM platform. Using the API, you can integrate Twenty with other systems, automate data synchronization, and build custom solutions around your customer data. The API provides endpoints to **create, read, update, and delete** core CRM objects (such as people and companies) as well as access metadata configuration.
 
-**API Playground:**  You can now access the API Playground within the app's settings. To try out API calls in real-time, log in to your Twenty workspace and navigate to **Settings > API & Webhooks** (under **Developers**). This will open the in-app API Playground and settings for API keys. _(If you don’t see the API & Webhooks section in Settings, enable “Advanced mode” in your app settings to reveal developer options.)_ 
+**API Playground:**  You can now access the API Playground within the app's settings. To try out API calls in real-time, log in to your Twenty workspace and navigate to **Settings → APIs & Webhooks**. This opens the in-app API Playground and the settings for API keys.
 **[Go to API Settings](https://app.twenty.com/settings)**
 
 ## Authentication
