--- a/packages/twenty-website/src/content/developers/api-and-webhooks/webhooks.mdx
+++ b/packages/twenty-website/src/content/developers/api-and-webhooks/webhooks.mdx
@@ -11,9 +11,9 @@ Webhooks in Twenty complement the API by enabling **real-time notifications** to
 With webhooks, Twenty will send an HTTP POST request to a URL you specify, containing details about the event. You can then handle that data in your application (e.g., to update your external database, trigger workflows, or send alerts).
 
 ## Setting Up a Webhook
-To create a webhook in Twenty, use the **API & Webhooks** settings in your Twenty app (Developer settings):
+To create a webhook in Twenty, use the **APIs & Webhooks** settings in your Twenty app:
 
-1. **Navigate to Settings:** In your Twenty application, go to **Settings** (ensure Advanced mode is enabled to see developer options).
+1. **Navigate to Settings:** In your Twenty application, go to **Settings → APIs & Webhooks**.
 2. **Create a Webhook:** Under **Webhooks** click on **+ Create webhook**.
 3. **Enter URL:** Provide the endpoint URL on your server where you want Twenty to send webhook requests. This should be a publicly accessible URL that can handle POST requests.
 4. **Save:** Click **Save** to create the webhook. The new webhook will be active immediately.
