--- a/packages/twenty-website/src/content/user-guide/getting-started/configure-workspace-in-three-steps.mdx
+++ b/packages/twenty-website/src/content/user-guide/getting-started/configure-workspace-in-three-steps.mdx
@@ -25,7 +25,7 @@ You control which contacts are imported in Twenty and what gets shared with the 
 You can configure the visibility and the contact creation preferences under Settings → Email / Calendar.
 
 ### Using another provider?
-This is currently under beta: you can activate this feature under Settings → Lab.
+This is currently under beta: you can activate this feature under Settings → Releases → Lab tab.
 You can add email accounts from any provider that supports IMAP and send emails with SMTP. Synchronizing calendars with CalDAV is coming soon!
 
 
