--- a/packages/twenty-website/src/content/user-guide/getting-started/getting-around-twenty.mdx
+++ b/packages/twenty-website/src/content/user-guide/getting-started/getting-around-twenty.mdx
@@ -54,7 +54,7 @@ Open your Settings on the top left to
 - Invite members
 - Edit your profile
 - Customize your workspace: billing, user permissions
-- Discover the latest releases and the upcoming features (under the Lab)
+- Discover the latest releases and the upcoming features (under Releases → Lab tab)
 
 If you do not see all those sections under Settings, reach out to your workspace administrator - some of them have a restricted access. 
 
