Reorganizing sections and adding new articles
- reorganized the order of certain files within a folder
- moved the import/export csv file
- corrected typo
- added file with tips regarding data model creation

--- a/packages/twenty-website/src/content/user-guide/collaboration/notes.mdx
+++ b/packages/twenty-website/src/content/user-guide/collaboration/notes.mdx
@@ -3,7 +3,7 @@ title: Notes
 info: Explore how to efficiently manage notes within record pages in Twenty, including procedures for creating, formatting, commenting, saving, and deleting notes.
 icon: IconNote
 image: /images/user-guide/notes/notes_header.png
-sectionInfo: Learn how to connect Twenty to your other tools.
+sectionInfo: Discover how to leverage Notes and Tasks to better collaborate with your team.
 ---
 
 Manage your record-linked notes efficiently using the powerful **Notes** feature. This guide walks through how to create, format, comment, and delete notes seamlessly within record pages. 
