--- a/packages/twenty-website/src/content/user-guide/collaboration/tasks.mdx
+++ b/packages/twenty-website/src/content/user-guide/collaboration/tasks.mdx
@@ -2,7 +2,7 @@
 title: Tasks
 info: Understand how to effectively manage tasks in Twenty, including tasks creation, viewing, editing, marking as complete, and deletion.
 image: /images/user-guide/tasks/tasks_header.png
-sectionInfo: Learn how to connect Twenty to your other tools.
+sectionInfo: Discover how to leverage Notes and Tasks to better collaborate with your team.
 ---
 
 Manage all tasks within your workspace using the **Tasks** feature. This guide will show you how to create and manage tasks, switch between upcoming and completed tasks, edit task details, and much more.
