--- a/packages/twenty-website/src/content/user-guide/data-model.mdx
+++ b/packages/twenty-website/src/content/user-guide/data-model.mdx
@@ -1,6 +1,6 @@
 ---
-title: Objects
-info: Discover how to use standard and custom objects in your workspace.
+title: Data Model
+info: Discover how to customize and get the most of your data model.
 icon: IconChecklist
 image: /images/user-guide/objects/objects.png
 sectionInfo: A brief guide to grasp the basics of Twenty
