--- a/packages/twenty-website/src/content/user-guide/getting-started/getting-around-twenty.mdx
+++ b/packages/twenty-website/src/content/user-guide/getting-started/getting-around-twenty.mdx
@@ -38,7 +38,7 @@ From there, you can:
 ## Views
 Every object (like Opportunities or People) supports multiple views. You're not limited in the number of views per object.
 
-Use the dropdown menu at the top left of the main layout to switch between thethe different views. For example:
+Use the dropdown menu at the top left of the main layout to switch between the different views. For example:
 - Use a Kanban view to track opportunities by stage
 - Use Group By view to create sections and improve efficiency
 - Use filters to focus on specific records (e.g. leads created last week)
