--- a/packages/twenty-website/src/content/user-guide/data-model/customize-your-data-model.mdx
+++ b/packages/twenty-website/src/content/user-guide/data-model/customize-your-data-model.mdx
@@ -14,7 +14,7 @@ Every business works differently. Being able to fully customize your data model 
 Twenty offers the flexibility you need to shape the data model that will best support your day-to-day. You can create as many custom objects and fields as you need - the price won't change.
 
 ## Tips to design your data model
-There is rarely one only way to build a data model. Below are a few tips to help you build yours.
+There is rarely only one way to build a data model. Below are a few tips to help you build yours.
 
 **1. Start with your core objects.**  
 Identify the main things you work with (e.g. Companies, People, Opportunities). Those are already available as they are used very often. But think of any other you might need.  
