added articles and changed pictures
- added FAQs for several folders
- created Pricing folder, including article explaining AGPL v3 licence
- detailed settings section
- added page to give link to calendar again for onboarding call
- changed the icons - they are not necessarily relevant but at least they are different so this remains colorful

--- a/packages/twenty-website/src/content/user-guide/collaboration.mdx
+++ b/packages/twenty-website/src/content/user-guide/collaboration.mdx
@@ -1,7 +1,7 @@
 ---
 title: Collaboration
-icon: IconUsers
+icon: IconNote
 info: Discover how to leverage Notes and Tasks to better collaborate with your team.
-image: /images/user-guide/what-is-twenty/20.png
+image: /images/user-guide/create-workspace/workspace-cover.png
 sectionInfo: A brief guide to grasp the basics of Twenty
 ---
