--- a/packages/twenty-website/src/content/user-guide/data-model/customize-your-data-model.mdx
+++ b/packages/twenty-website/src/content/user-guide/data-model/customize-your-data-model.mdx
@@ -61,7 +61,7 @@ If the answer is “yes” to one or more of these, it’s probably time for a n
 Our team can assist you designing and creating the data model you need. Discover our Onboarding Pack [here](https://twenty.com/onboarding-packages).
 
 
-## FAQ
+## FAQs
 - Where can I see and edit my data model?
   - You can access your Data Model under the `Settings`.
 - Why can't I see the Data Model under the Settings?
