--- a/packages/twenty-website/src/content/user-guide/integrations/getting-started-workflows.mdx
+++ b/packages/twenty-website/src/content/user-guide/integrations/getting-started-workflows.mdx
@@ -1,8 +1,8 @@
 ---
 title: Getting started with workflows
 info: Learn how to add automations in Twenty and how to data in and out.
-icon: IconApi
-image: /images/user-guide/api/api.png
+icon: IconNote
+image: /images/user-guide/create-workspace/workspace-cover.png
 sectionInfo: Learn how to connect Twenty to your other tools.
 ---
 ## What can I do with workflows?
