--- a/packages/twenty-website/src/content/user-guide/integrations.mdx
+++ b/packages/twenty-website/src/content/user-guide/integrations.mdx
@@ -1,7 +1,7 @@
 ---
 title: Integrations
 info: Learn how to connect Twenty to your other tools.
-icon: IconApi
-image: /images/user-guide/api/api.png
+icon: IconBrandZapier
+image: /images/user-guide/integrations/plug.png
 sectionInfo: A brief guide to grasp the basics of Twenty
 ---
