--- a/packages/twenty-website/src/content/user-guide/integrations/api-webhooks.mdx
+++ b/packages/twenty-website/src/content/user-guide/integrations/api-webhooks.mdx
@@ -5,7 +5,7 @@ icon: IconApi
 image: /images/user-guide/api/api.png
 sectionInfo: Learn how to connect Twenty to your other tools.
 ---
-## Twnenty API
+## Twenty API
 Twenty offers APIs in **REST and GraphQL**.  
 - Use the **Metadata API** for anything related to your workspace and its data model.
 - Use the **Core API** for anything related to your records.
