--- a/packages/twenty-website/src/content/user-guide/other.mdx
+++ b/packages/twenty-website/src/content/user-guide/other.mdx
@@ -1,7 +1,7 @@
 ---
 title: Other
 info: Discover tips and tricks for optimizing your experience, including user and workspace management, personalization settings, and navigation enhancements.
-icon: IconGitHub
-image: /images/user-guide/tips/light-bulb.png
+icon: IconTargetArrow
+image: /images/user-guide/kanban-views/kanban.png
 sectionInfo: A brief guide to grasp the basics of Twenty
 ---
