Add quote to escape column

--- a/packages/twenty-website/src/content/user-guide/settings/permissions.mdx
+++ b/packages/twenty-website/src/content/user-guide/settings/permissions.mdx
@@ -1,6 +1,6 @@
 ---
 title: Permissions
-info: Learn how to control access: share workspaces, assign roles, and set permissions for data, settings, and actions.
+info: "Learn how to control access: share workspaces, assign roles, and set permissions for data, settings, and actions."
 image: /images/user-guide/permissions/permissions.png
 sectionInfo: Learn how to manage your workspace.
 ---
