Took feedbacks from Charles & Felix's review + added improvements to text
- added " " around the titles
- removed the section about our OS licence since not ready to publish
- better ui for the FAQ
- FAQ everywhere instead of FAQs
- updated getting started with workflows + import / export file (to reflect the new unique fields)
- updated from book our onboarding call to point to our Implementation services page instead
- cahnged the icons

--- a/packages/twenty-website/src/content/user-guide/data-model/creating-records.mdx
+++ b/packages/twenty-website/src/content/user-guide/data-model/creating-records.mdx
@@ -1,6 +1,6 @@
 ---
 title: Table Views
-info: Learn how to customize and navigate Table Views.
+info: "Learn how to customize and navigate Table Views."
 icon: IconChecklist
 image: /images/user-guide/table-views/table.png
 sectionInfo: Discover how to use standard and custom objects in your workspace.
