--- a/packages/twenty-website/src/content/user-guide/data-model/fields.mdx
+++ b/packages/twenty-website/src/content/user-guide/data-model/fields.mdx
@@ -1,6 +1,6 @@
 ---
 title: Fields   
-info: Understand the role of fields and how to handle them.
+info: "Understand the role of fields and how to handle them."
 icon: IconChecklist
 image: /images/user-guide/fields/field.png
 sectionInfo: Discover how to use standard and custom objects in your workspace.
