--- a/packages/twenty-website/src/content/user-guide/getting-started/configure-workspace-in-three-steps.mdx
+++ b/packages/twenty-website/src/content/user-guide/getting-started/configure-workspace-in-three-steps.mdx
@@ -1,6 +1,6 @@
 ---
 title: Configure your Workspace
-info: Start configuring your workspace with these three steps.
+info: "Start configuring your workspace with these three steps."
 icon: IconNote
 image: /images/user-guide/table-views/table.png
 sectionInfo: Discover Twenty, an open-source CRM.
