--- a/packages/twenty-website/src/content/user-guide/getting-started/getting-around-twenty.mdx
+++ b/packages/twenty-website/src/content/user-guide/getting-started/getting-around-twenty.mdx
@@ -1,6 +1,6 @@
 ---
 title: Getting around Twenty
-info: Get a quick overview of how to navigate through the platform and where to take different types of actions.
+info: "Get a quick overview of how to navigate through the platform and where to take different types of actions."
 icon: IconNote
 image: /images/user-guide/create-workspace/workspace-cover.png
 sectionInfo: Discover Twenty, an open-source CRM.
