--- a/packages/twenty-website/src/content/user-guide/getting-started/what-is-twenty.mdx
+++ b/packages/twenty-website/src/content/user-guide/getting-started/what-is-twenty.mdx
@@ -1,8 +1,8 @@
 ---
 title: What is Twenty
 icon: IconUsers
-info: Discover Twenty, an open-source CRM, its features, benefits, system requirements, and how to get involved.
-image: /images/user-guide/create-workspace/workspace-cover.png
+info: "Discover Twenty, an open-source CRM, its features, benefits, system requirements, and how to get involved."
+image: /images/user-guide/what-is-twenty/20.png
 sectionInfo: Discover Twenty, an open-source CRM.
 ---
 
