--- a/packages/twenty-website/src/content/user-guide/integrations/api-webhooks.mdx
+++ b/packages/twenty-website/src/content/user-guide/integrations/api-webhooks.mdx
@@ -1,6 +1,6 @@
 ---
 title: API and Webhooks
-info: Learn how to manage API keys and Webhooks in Twenty.
+info: "Learn how to manage API keys and Webhooks in Twenty."
 icon: IconApi
 image: /images/user-guide/api/api.png
 sectionInfo: Learn how to connect Twenty to your other tools.
