--- a/packages/twenty-website/src/content/user-guide/integrations/emails.mdx
+++ b/packages/twenty-website/src/content/user-guide/integrations/emails.mdx
@@ -1,6 +1,6 @@
 ---
 title: Emails
-info: Understand the concept of email synchronization in Twenty, including how to read synced emails, connect new mailboxes, and set sharing levels.
+info: "Understand the concept of email synchronization in Twenty, including how to read synced emails, connect new mailboxes, and set sharing levels."
 icon: IconChecklist
 image: /images/user-guide/emails/emails_header.png
 sectionInfo: Learn how to connect Twenty to your other tools.
