--- a/packages/twenty-website/src/content/user-guide/integrations/getting-started-workflows.mdx
+++ b/packages/twenty-website/src/content/user-guide/integrations/getting-started-workflows.mdx
@@ -1,42 +1,43 @@
 ---
 title: Getting started with workflows
-info: Learn how to add automations in Twenty and how to data in and out.
+info: "Learn how to add automations in Twenty and how to data in and out."
 icon: IconNote
 image: /images/user-guide/create-workspace/workspace-cover.png
 sectionInfo: Learn how to connect Twenty to your other tools.
 ---
 ## What can I do with workflows?
 There are two main categories of actions you can automate using the workflows.
-  1. Automate the busy work within Twenty to reduce what your team needs to update manually while maintaining an up-to-date CRM.
-  2. Bring data in and out of Twenty from your other tools: forms, product data, enrichment, call recorders, invoicing solution and so on.
+  1. **Automate the busy work within Twenty**: reduce the time spent by your team manually updating their CRM.
+  2. **Bring data in and out of Twenty from your other tools**: forms, product data, enrichment, call recorders, invoicing solution and so on.
 
 Let's deep dive into a few examples before getting into the how.  
 
 ## 1. Automate the busy work
-Your CRM is only helpful if the data’s up to date — but no one likes updating it manually.  
+Your CRM is only helpful if the data is up to date — but no one likes updating it.  
 Use workflows to automate low-value, repeatable tasks.
-- Bring a field from one object to another. Exaxmple:
-- Automatically attach the person you've just created with the related Company record. Create one if none exist.
-- Automatically update the Company tag from `Prospect` to `Customer` when an opportunity is moved to `Won`, create onboarding Tasks assigned to the relevant team and trigger an invoice.
-- Automatically update the Company tag from `Customer` to `Churned` when the related subscription gets cancelled.
+- Automatically attach the person you've just created with the related Company record.
+- When an opportunity is moved to `Won`, automatically update the Company tag from `Prospect` to `Customer`, create onboarding Tasks and assign them to the relevant team.
+- Automatically update the Company tag from `Customer` to `Churned` when the subscription is cancelled.
 - Send an email alert to the company owner when a key prospect starts engaging with your solution.
-- Send an email alert to the company owner when a contract end date is near or engagement drops.
+- Send an email alert to the company owner when a contract comes to an end or engagement drops.
 
-To do so, you will mainly use the triggers Create/Update Records and the actions Create/Update Records, Send Email.
+To do so, you will mainly use the triggers `Create/Update Records` and the actions `Create/Update Records`, `Send Email`.
 
 
 ## 2. Bring data in and out of Twenty
 If you need to bring data in and out of Twenty from your other tools, let's do this using a workflow.
 Below are a few examples of what you can build.
-- Create records from **form fills** on your website (flag demo requests in real-time, log job applicants, ...)
+- Create records from **web forms**: demo requests in real-time, log job applicants, ...
 - Give your sellers the context they need to be on top of their accounts, bringing **product data** in Twenty
 - Connect your **call recorder** to automatically create a Note in Twenty with the summary of a meeting and a Task with the action items
 - Enrich your leads with demographics enrichment to know who your team is talking to
-- Send the informations needed to generate an invoice once a deal is closed
+- Send the informations needed to generate an invoice when a deal is closed
 
 To do so, you will mainly leverage the ```On a schedule``` and ```Webhook``` triggers, as well as the ```HTTP``` and ```Code``` functions. 
+
 ### What if I don't want to build those connections?
-We got you covered! Just reach out and we will put you in contact with our certified implementation partners. They can create your data model, migrate your data, build your workflows.  
+We offer [Implementation Services](https://twenty.com/implementaion-services) to help you create the automations you need.  
+Depending on the scope of you project, we will suggest an [Onboarding pack](https://twenty.com/onboarding-packages) or we will put you in contact with our certified implementation partners. They can create your data model, migrate your data, build your workflows.  
 
 ### I'm not sure the connection I need to doable 
 Send us a message and we will help you assess the feasibility. 
