--- a/packages/twenty-website/src/content/user-guide/integrations/integrations.mdx
+++ b/packages/twenty-website/src/content/user-guide/integrations/integrations.mdx
@@ -1,6 +1,6 @@
 ---
 title: Integrations
-info: Learn how to connect Twenty to your other tools.
+info: "Learn how to connect Twenty to your other tools."
 icon: IconBrandZapier
 image: /images/user-guide/integrations/plug.png
 sectionInfo: Learn how to connect Twenty to your other tools.
