--- a/packages/twenty-website/src/content/user-guide/integrations/workflows.mdx
+++ b/packages/twenty-website/src/content/user-guide/integrations/workflows.mdx
@@ -1,6 +1,6 @@
 ---
 title: Workflows
-info: Understand the workflow feature in Twenty including how to create and delete workflows, configure triggers, add actions, run workflows, and manage workflow history.
+info: "Understand the workflow feature in Twenty including how to create and delete workflows, configure triggers, add actions, run workflows, and manage workflow history."
 image: /images/user-guide/workflows/workflow.png
 sectionInfo: Learn how to connect Twenty to your other tools.
 ---
