--- a/packages/twenty-website/src/content/user-guide/other/github.mdx
+++ b/packages/twenty-website/src/content/user-guide/other/github.mdx
@@ -1,6 +1,6 @@
 ---
 title: GitHub
-info: Learn about the Twenty GitHub repository and the variety of resources it hosts including source code, documentation, and discussions.
+info: "Learn about the Twenty GitHub repository and the variety of resources it hosts including source code, documentation, and discussions."
 icon: IconGitHub
 image: /images/user-guide/github/github-header.png
 sectionInfo: Discover tips and tricks to optimize your experience.
