--- a/packages/twenty-website/src/content/user-guide/other/glossary.mdx
+++ b/packages/twenty-website/src/content/user-guide/other/glossary.mdx
@@ -1,6 +1,6 @@
 ---
 title: Glossary
-info: Get familiar with essential terminology used in Twenty.
+info: "Get familiar with essential terminology used in Twenty."
 icon: IconVocabulary
 image: /images/user-guide/glossary/glossary.png
 sectionInfo: Discover tips and tricks to optimize your experience.
