--- a/packages/twenty-website/src/content/user-guide/other/tips.mdx
+++ b/packages/twenty-website/src/content/user-guide/other/tips.mdx
@@ -1,6 +1,6 @@
 ---
 title: Tips 
-info: Discover tips and tricks for optimizing your experience, including user and workspace management, personalization settings, and navigation enhancements.
+info: "Discover tips and tricks for optimizing your experience, including user and workspace management, personalization settings, and navigation enhancements."
 icon: IconInfoCircle
 image: /images/user-guide/tips/light-bulb.png
 sectionInfo: Discover tips and tricks to optimize your experience.
