--- a/packages/twenty-website/src/content/user-guide/views/kanban-views.mdx
+++ b/packages/twenty-website/src/content/user-guide/views/kanban-views.mdx
@@ -1,6 +1,6 @@
 ---
 title: Kanban Views
-info: Learn how to customize and navigate Kanban Views.
+info: "Learn how to customize and navigate Kanban Views."
 icon: IconTargetArrow
 image: /images/user-guide/kanban-views/kanban.png
 sectionInfo: Discover how to use standard and custom objects in your workspace.
