--- a/packages/twenty-website/src/content/user-guide/views/views-sort-filter.mdx
+++ b/packages/twenty-website/src/content/user-guide/views/views-sort-filter.mdx
@@ -1,6 +1,6 @@
 ---
 title: Views, Sort and Filter
-info: Find out how to create, manage and delete Object Views.
+info: "Find out how to create, manage and delete Object Views."
 icon: IconChecklist
 image: /images/user-guide/views/filter.png
 sectionInfo: Discover how to use standard and custom objects in your workspace.
