--- a/packages/twenty-website/src/content/user-guide/data-model/standard-objects.mdx
+++ b/packages/twenty-website/src/content/user-guide/data-model/standard-objects.mdx
@@ -1,6 +1,6 @@
 ---
 title: Standard and Custom Objects
-info: Discover how to use standard and custom objects in your workspace.
+info: "Discover how to use standard and custom objects in your workspace."
 icon: IconChecklist
 image: /images/user-guide/objects/objects.png
 sectionInfo: Discover how to use standard and custom objects in your workspace.
