--- a/packages/twenty-website/src/content/user-guide/settings/settings-faq.mdx
+++ b/packages/twenty-website/src/content/user-guide/settings/settings-faq.mdx
@@ -1,20 +1,20 @@
 ---
-title: Settings FAQs
-info: Understand how to best manage your workspace
+title: Settings FAQ
+info: "Understand how to best manage your workspace."
 image: /images/user-guide/workflows/workflow.png
 sectionInfo: Learn how to manage your workspace.
 ---
 
-## FAQs
+## Settings FAQ
 
 <details>
-  <summary><strong>Can I have several workspaces for a same email address?</strong></summary>
+  <summary><strong>Can I have several workspaces?</strong></summary>
 
   Absolutely. You can create a new workspace by clicking on the dropdown menu on the very top left of the screen (the one that contains the name of your workspace), on the three dots and then on `Create Workspace`.
 </details>
 
 <details>
-  <summary><strong>I wrongly created several workspaces but need to keep only one. What should I do?</strong></summary>
+  <summary><strong>I accidentally created multiple workspaces but only need one. What should I do?</strong></summary>
 
   Just delete the workspaces you no longer need, you can do so under `Settings -> General`.  
   **Careful: do not delete your account** (accessible under the Profile section) — your account is shared among the different workspaces.
@@ -23,7 +23,7 @@ sectionInfo: Learn how to manage your workspace.
 <details>
   <summary><strong>How can I disable my workspace?</strong></summary>
 
-  If you want to just disable your workspace (not delete it), go to `Billings` and click on `Cancel Plan`.
+  If you just want to disable your workspace (not delete it), go to `Billings` and click on `Cancel Plan`.
 </details>
 
 <details>
