--- a/packages/twenty-website/src/content/user-guide/integrations/import-export-data.mdx
+++ b/packages/twenty-website/src/content/user-guide/integrations/import-export-data.mdx
@@ -3,7 +3,7 @@ title: Import/Export Data
 info: "Learn how to import and export data."
 icon: IconNote
 image: /images/user-guide/import-export-data/cloud.png
-sectionInfo: Discover how to use standard and custom objects in your workspace.
+sectionInfo: "Discover how to use standard and custom objects in your workspace."
 ---
 
 # Import data
