Added articles (pricing, onboarding, OS licence) and updated icons (#14334)
- added FAQs for several folders
- created Pricing folder, including article explaining AGPL v3 licence
- detailed settings section
- added page to give link to calendar again for onboarding call
- changed the icons - they are not necessarily relevant but at least
they are different so this remains colorful

---------

Co-authored-by: Charles Bochet <charles@twenty.com>

--- a/packages/twenty-website/src/content/user-guide/data-model/customize-your-data-model.mdx
+++ b/packages/twenty-website/src/content/user-guide/data-model/customize-your-data-model.mdx
@@ -1,6 +1,6 @@
 ---
 title: Customize your data model
-info: Learn how to design and create a data model that reflects how you operate. 
+info: "Learn how to design and create a data model that reflects how you operate."
 icon: IconNote
 image: /images/user-guide/import-export-data/cloud.png
 sectionInfo: Discover how to use standard and custom objects in your workspace.
@@ -36,7 +36,6 @@ If something can be linked multiple times and you don’t know how many, it’s 
 **5. Keep it simple first.**  
 Start with fields. Move to new objects only when you feel the limits — too many fields, repeated records, or relationships that don’t fit neatly.  
 
----
 
 ### Special note on People and Companies  
 
@@ -44,7 +43,6 @@ Start with fields. Move to new objects only when you feel the limits — too man
 - Example: it is best to use the **People object** for both prospects and partners, adding a field called `Person Type`. Avoid creating a Partner object, since you wouldn’t be able to access email threads from it. Instead, create different views under People — one showing Partners, another showing Prospects.  
 - Given the point above, it’s fine to have fields that don’t apply to every record. For example, under People you might add a **Referral Link** field that is only relevant when `Person Type = Partner`. That’s okay — you can hide this field from views where it doesn’t matter.  
 
----
 
 ### Questions to guide your choice  
 
@@ -62,12 +60,27 @@ Our team can assist you designing and creating the data model you need. Discover
 
 
 ## FAQ
-- Where can I see and edit my data model?
-  - You can access your Data Model under the `Settings`.
-- Why can't I see the Data Model under the Settings?
-  - Reach out to your workspace admin, data model is usually only accessible by admins.
-- How many custom objects or fields can I create?
-  - You can create as many custom objects and fields as you need - the price won't change.
+
+<details>
+<summary>Where can I see and edit my data model?</summary>
+
+You can access your Data Model under the `Settings`.
+
+</details>
+
+<details>
+<summary>Why can't I see the Data Model under the Settings?</summary>
+
+Reach out to your workspace administrator, data model is usually only accessible by administrators.
+
+</details>
+
+<details>
+<summary>How many custom objects or fields can I create?</summary>
+
+You can create as many custom objects and fields as you need - the price won't change.
+
+</details>
 
 
 <ArticleEditContent></ArticleEditContent>
