--- a/packages/twenty-website/src/content/user-guide/getting-started/configure-workspace-in-three-steps.mdx
+++ b/packages/twenty-website/src/content/user-guide/getting-started/configure-workspace-in-three-steps.mdx
@@ -1,8 +1,8 @@
 ---
-title: Configure your workspace
-info: Start configuring your workspace with these three steps.
+title: Configure your Workspace
+info: "Start configuring your workspace with these three steps."
 icon: IconNote
-image: /images/user-guide/create-workspace/workspace-cover.png
+image: /images/user-guide/table-views/table.png
 sectionInfo: Discover Twenty, an open-source CRM.
 ---
 
@@ -60,6 +60,9 @@ Here are a few tips:
 - Two People cannot have the same email address. Two Companies cannot have the same domain. 
 - You can deactivate fields and objects you do not want to use.
 - You can hide fields from views: don't be afraid of creating fields, you won't have to display all of them.
+
+Read [this article](https://twenty.com/user-guide/section/data-model/customize-your-data-model) to learn how to design your data model.  
+
 
 # 3. Create your first Favourite view
 Creating different views is key to make the data actionable for your team.
