--- a/packages/twenty-website/src/content/user-guide/getting-started/create-workspace.mdx
+++ b/packages/twenty-website/src/content/user-guide/getting-started/create-workspace.mdx
@@ -1,8 +1,8 @@
 ---
 title: Create a Workspace
-info: Follow a step-by-step guide on how to register on Twenty, choose a subscription plan, confirm your payment and set up your account, with additional advice on seeking assistance if needed.
+info: "Follow a step-by-step guide on how to register on Twenty, choose a subscription plan, confirm your payment and set up your account, with additional advice on seeking assistance if needed."
 icon: IconNote
-image: /images/user-guide/create-workspace/workspace-cover.png
+image: /images/user-guide/glossary/glossary.png
 sectionInfo: Discover Twenty, an open-source CRM.
 ---
 
