--- a/packages/twenty-website/src/content/user-guide/settings/permissions.mdx
+++ b/packages/twenty-website/src/content/user-guide/settings/permissions.mdx
@@ -1,8 +1,8 @@
 ---
-title: Permission
-info: Learn how to manage workspace sharing, create, and assign roles, and customize permissions for objects, settings, and general actions.
+title: Permissions
+info: "Learn how to control access: share workspaces, assign roles, and set permissions for data, settings, and actions."
 image: /images/user-guide/permissions/permissions.png
-sectionInfo: Learn how to manage permissions in Twenty.
+sectionInfo: Learn how to manage your workspace.
 ---
 
 ## Share a Workspace
