--- a/packages/twenty-website/src/content/user-guide/settings.mdx
+++ b/packages/twenty-website/src/content/user-guide/settings.mdx
@@ -1,7 +1,7 @@
 ---
 title: Settings
-info: Learn how to manage permissions in Twenty.
+info: Learn how to manage your workspace: permissions, billing, data model and much more.
 icon: IconGitHub
-image: /images/user-guide/tips/light-bulb.png
-sectionInfo: Learn how to manage permissions in Twenty.
+image: /images/user-guide/workflows/workflow.png
+sectionInfo: Learn how to manage your workspace.
 ---
