--- a/packages/twenty-website/src/content/developers/local-setup.mdx
+++ b/packages/twenty-website/src/content/developers/local-setup.mdx
@@ -137,30 +137,32 @@ You should run all commands in the following steps from the root of the project.
     via Homebrew on MacOS. Instead, it creates a PostgreSQL role that matches your macOS
     username (e.g., "john").
     To check and create the `postgres` user if necessary, follow these steps:
-    Connect to PostgreSQL
     ```bash
+      # Connect to PostgreSQL
       psql postgres
       or
       psql -U $(whoami) -d postgres
     ```
-    List existing PostgreSQL roles
+
     Once at the psql prompt (postgres=#), run:
      ```bash
+      # List existing PostgreSQL roles
       \du
     ```
-    You’ll see output similar to:
+    You'll see output similar to:
      ```bash
       Role name | Attributes  | Member of 
       -----------+-------------+-----------
       john      | Superuser   | {}
     ```
+
     If you do not see a `postgres` role listed, proceed to the next step.
-    Create the `postgres` role manually
-    At the psql prompt, run:
+    Create the `postgres` role manually:
      ```bash
       CREATE ROLE postgres WITH SUPERUSER LOGIN;
     ```
     This creates a superuser role named `postgres` with login access.
+
     <b>Option 2:</b> If you have docker installed:
     ```bash
       make postgres-on-docker
